--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,10 +1,12 @@
 .loader {
     display: block;
+    margin-left: auto;
+    margin-right: auto;
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    
+    width: 400px;
 
     padding: 30px;
 
